Revolutionary changes in this commit. Expand for details. - Added FULL cImpT/Tox (Compact Implication Transfer over Tox Protocol) support   - Type ">" before your message and Poison will automatically and intelligently     route it using cImpT/Tox. - Fixed display of actions (name of actor is now included)   - Reminder: press Shift+Return to send the current message     as an action.

--- a/chat_styles/Default.psnChatStyle/style.css
+++ b/chat_styles/Default.psnChatStyle/style.css
@@ -24,8 +24,11 @@ div.messages {
 }
 div.messages > p {
     margin:0;
-    color:#333;
+    color:#000;
     word-wrap:break-word;
+}
+div.messages > p.implications {
+    color:green;
 }
 div.timestamp {
     vertical-align:top;
